--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.9",
     "csv-writer": "^1.6.0",
+    "fetch-cookie": "^0.11.0",
     "node-fetch": "^2.6.1",
+    "tough-cookie": "^4.0.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.3.1",
     "@types/node-fetch": "^2.5.10",
+    "@types/tough-cookie": "^4.0.0",
+    "@types/yargs": "^17.0.0",
     "ts-standard": "^10.0.0"
   }
 }
