Build executable binaries with `pkg` (#1)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc && pkg --out-path out out/bin/crawl.js",
     "lint": "ts-standard --fix",
     "start": "ts-node bin/crawl.ts"
   },
